style changes on header

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -4,8 +4,12 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-<div id="header" style="background-color: #00b300" my-5 py-5>
-    <h1>PythonPractico.com</h1>
+<div id="header" style="background-color: #00b300">
+    <div class="container" my-5 py-5>
+        <div class="row">
+            <h1 style="color: white">PythonPractico.com</h1>
+        </div>
+    </div>
 </div>
 
 
