header styling changes

--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div id="header" style="background-color: #00b300">
-    <div class="container" my-5 py-5>
+    <div class="container-fluid my-5 py-5">
         <div class="row">
             <h1 style="color: white">PythonPractico.com</h1>
         </div>
