--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -5,45 +5,44 @@
 
 {% block content %}
 <div id="header" style="background-color: #00b300">
-    <div class="container my-5 py-5">
-        <div class="row">
-            <div class="col">
-                <h1 style="color: white">PythonPractico.com</h1>
-            </div>
-        </div>
+  <div class="container py-5">
+    <div class="row">
+      <div class="col">
+        <h1 style="color: white">PythonPractico.com</h1>
+      </div>
     </div>
+  </div>
 </div>
 
-
-<div id="featured" py-5>
-    <div class="container">
-        <div class="card-deck">
-            <div class="card">
-            <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-            </div>
-            <div class="card">
-            <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-            </div>
-            <div class="card">
-            <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            </div>
-            </div>
-        </div>
+<div id="featured" style="background-color: #f8f9fa" py-5>
+  <div class="container">
+    <div class="card-deck">
+      <div class="card">
+      <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+      </div>
+      <div class="card">
+      <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+      </div>
+      <div class="card">
+      <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+      </div>
     </div>
+  </div>
 </div>
 
 {% endblock content %}
