--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -15,7 +15,7 @@
 </div>
 
 <div id="featured" style="background-color: #f8f9fa" py-5>
-  <div class="container">
+  <div class="container py-5">
     <div class="card-deck">
       <div class="card">
       <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
