--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -4,7 +4,11 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-<div id="header" style="background-color: #00b300">
+<nav class="navbar fixed-top navbar-light" style="background-color: #006700">
+  <a class="navbar-brand" href="#">Fixed top</a>
+</nav>
+
+<div id="header" style="background-color: #009a00">
   <div class="container py-5">
     <div class="row">
       <div class="col">
