--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -4,11 +4,11 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-<nav class="navbar fixed-top navbar-light" style="background-color: #006700">
-  <a class="navbar-brand" href="#">Fixed top</a>
+<nav class="navbar fixed-top" style="background-color: #006700">
+  <a class="navbar-brand weight-bold" href="#">PythonPractico</a>
 </nav>
 
-<div id="header" style="background-color: #009a00">
+<div id="header" style="padding-top: 50px; background-color: #008000">
   <div class="container py-5">
     <div class="row">
       <div class="col">
