--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -4,15 +4,15 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-<nav class="navbar fixed-top" style="background-color: #006700">
-  <a class="navbar-brand weight-bold" href="#">PythonPractico</a>
+<nav class="navbar sticky-top" style="background-color: #006700">
+  <a class="navbar-brand" href="#">PythonPractico</a>
 </nav>
 
 <div id="header" style="padding-top: 50px; background-color: #008000">
   <div class="container py-5">
     <div class="row">
       <div class="col">
-        <h1 style="color: white">PythonPractico.com</h1>
+        <h1 class="text-white weight-bold">PythonPractico.com</h1>
       </div>
     </div>
   </div>
