--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -4,7 +4,7 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-<nav class="navbar sticky-top" style="background-color: #006700">
+<nav class="navbar" style="background-color: #006700">
   <a class="navbar-brand" href="#">PythonPractico</a>
 </nav>
 
@@ -13,6 +13,7 @@
     <div class="row">
       <div class="col">
         <h1 class="text-white weight-bold">PythonPractico.com</h1>
+        <img src="https://www.xlwings.org/assets/images/home/xlwings.png">
       </div>
     </div>
   </div>
