--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col">
         <h1 class="text-white weight-bold">PythonPractico.com</h1>
-        <img src="https://www.xlwings.org/assets/images/home/xlwings.png">
+        <img class="card-img-top" src="https://www.xlwings.org/assets/images/home/xlwings.png">
       </div>
     </div>
   </div>
