--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -5,14 +5,14 @@
 
 {% block content %}
 <nav class="navbar" style="background-color: #006700">
-  <a class="navbar-brand" href="#">PythonPractico</a>
+  <a class="navbar-brand text-white" href="#">PythonPractico</a>
 </nav>
 
 <div id="header" style="padding-top: 50px; background-color: #008000">
   <div class="container py-5">
     <div class="row">
       <div class="col">
-        <h1 class="text-white weight-bold">PythonPractico.com</h1>
+        <h1 class="text-white weight-bold">Python Practico</h1>
         <img class="card-img-top" src="https://www.xlwings.org/assets/images/home/xlwings.png">
       </div>
     </div>
@@ -31,7 +31,7 @@
       </div>
       </div>
       <div class="card">
-      <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
+      <img class="card-img-top" src="https://static.amazon.jobs/global_images/36/images/Teams_3_copy.jpg?1540850190" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -39,7 +39,7 @@
       </div>
       </div>
       <div class="card">
-      <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
+      <img class="card-img-top" src="https://static.amazon.jobs/global_images/34/images/Job_Categories-s.jpg?1540850104" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
