--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -8,7 +8,7 @@
   <a class="navbar-brand text-white" href="#">PythonPractico</a>
 </nav>
 
-<div id="header" style="padding-top: 50px; background-color: #008000">
+<div id="header" style="background-color: #008000">
   <div class="container py-5">
     <div class="row">
       <div class="col">
@@ -25,7 +25,7 @@
       <div class="card">
       <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Python</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
@@ -33,7 +33,7 @@
       <div class="card">
       <img class="card-img-top" src="https://static.amazon.jobs/global_images/36/images/Teams_3_copy.jpg?1540850190" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Pandas</h5>
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
@@ -41,7 +41,7 @@
       <div class="card">
       <img class="card-img-top" src="https://static.amazon.jobs/global_images/34/images/Job_Categories-s.jpg?1540850104" alt="Card image cap">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Django</h5>
         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
