--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -21,6 +21,7 @@
 
 <div id="featured" style="background-color: #f8f9fa" py-5>
   <div class="container py-5">
+    <h3 class="text-white weight-bold">Categorias</h3>
     <div class="card-deck">
       <div class="card">
       <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
