--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -19,9 +19,12 @@
   </div>
 </div>
 
-<div id="featured" style="background-color: #f8f9fa" py-5>
-  <div class="container py-5">
-    <h3 class="text-white weight-bold">Categorias</h3>
+<div id="featured" py-5>
+  <div class="container" style="background-color: #e1e5ea">
+    <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
+  </div>
+  <div class="container py-5" style="background-color: #f8f9fa">
+    <h3 class="text-dark weight-bold">Categorias</h3>
     <div class="card-deck">
       <div class="card">
       <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
