--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -19,11 +19,14 @@
   </div>
 </div>
 
-<div id="featured" py-5>
-  <div class="container" style="background-color: #e1e5ea">
+<div id="latest" style="background-color: #e1e5ea">
+  <div class="container">
     <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
-  </div>
-  <div class="container py-5" style="background-color: #f8f9fa">
+  <div>
+</div>
+
+<div id="featured" style="background-color: #f8f9fa" py-5>
+  <div class="container py-5">
     <h3 class="text-dark weight-bold">Categorias</h3>
     <div class="card-deck">
       <div class="card">
