--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -19,10 +19,10 @@
   </div>
 </div>
 
-<div id="latest" style="background-color: #e1e5ea">
+<div id="latest" style="background-color: #e1e5ea" py-5>
   <div class="container">
     <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
-  <div>
+  </div>
 </div>
 
 <div id="featured" style="background-color: #f8f9fa" py-5>
