--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -19,8 +19,8 @@
   </div>
 </div>
 
-<div id="latest" style="background-color: #e1e5ea" py-5>
-  <div class="container">
+<div id="latest" style="background-color: #008040">
+  <div class="container py-5">
     <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
   </div>
 </div>
