--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -19,13 +19,13 @@
   </div>
 </div>
 
-<div id="latest" style="background-color: #009a00">
+<div id="latest" style="background-color: #f8f9fa">
   <div class="container py-3">
     <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
   </div>
 </div>
 
-<div id="featured" style="background-color: #f8f9fa" py-5>
+<div id="featured" style="background-color: #ffffff" py-5>
   <div class="container py-5">
     <h3 class="text-dark weight-bold">Categorias</h3>
     <div class="card-deck">
