--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -4,11 +4,11 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
-<nav class="navbar" style="background-color: #006700">
+<nav class="navbar" style="background-color: #232f3e">
   <a class="navbar-brand text-white" href="#">PythonPractico</a>
 </nav>
 
-<div id="header" style="background-color: #008000">
+<div id="header" style="background-color: #233d3e">
   <div class="container py-5">
     <div class="row">
       <div class="col">
@@ -19,9 +19,15 @@
   </div>
 </div>
 
-<div id="latest" style="background-color: #f8f9fa">
+<div id="latest" style="background-color: #cecece">
   <div class="container py-3">
     <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
+    <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
   </div>
 </div>
 
