--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -19,11 +19,17 @@
   </div>
 </div>
 
-<div id="latest" style="background-color: #cecece">
-  <div class="container py-3">
+<div id="latest" style="background-color: #f8faf9">
+  <div class="container py-5">
     <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
     <div class="card">
-        <div class="card-body">
+        <div class="card-body border-0">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body border-0">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
