--- a/pythonpractico/templates/base.html
+++ b/pythonpractico/templates/base.html
@@ -29,13 +29,12 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
-        <nav class="navbar fixed-top" style="background-color: #232f3e">
+        <nav class="navbar" style="background-color: #232f3e">
           <a class="navbar-brand text-white" href="#">PythonPractico</a>
         </nav>
         {% block content %}
         {% endblock %}
-        <nav class="navbar fixed-bottom" style="background-color: #232f3e">
-          <a class="navbar-brand text-white" href="#">PythonPractico</a>
+        <nav class="navbar py-5" style="background-color: #24292e">
         </nav>
 
         {# Global javascript #}
