article page add

--- a/pythonpractico/templates/base.html
+++ b/pythonpractico/templates/base.html
@@ -29,7 +29,7 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
-        <nav class="navbar" style="background-color: #232f3e">
+        <nav class="navbar" style="background-color: #343a40">
           <a class="navbar-brand text-white" href="#">PythonPractico</a>
         </nav>
 
