--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -6,5 +6,7 @@
 {% block body_class %}template-homepage{% endblock %}
 
 {% block content %}
+<div class="container py-5">
   {% include_block page.body %}
+</div>
 {% endblock content %}
