--- a/pythonpractico/templates/base.html
+++ b/pythonpractico/templates/base.html
@@ -30,7 +30,7 @@
         {% wagtailuserbar %}
 
         <nav class="navbar" style="background-color: #343a40">
-          <a class="navbar-brand text-white" href="#">PythonPractico</a>
+          <a class="navbar-brand text-white" href="{% slugurl 'home' %}">PythonPractico</a>
         </nav>
 
         {% block content %}
