--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -10,6 +10,8 @@
   {% for block in page.body %}
     {% if block.block_type == 'table' %}
       <div class="table-responsive">{{ block.value }}</div>
+    {% elif block.block_type == 'code' %}
+      <div class="bg-light border p-3 mb-3"><pre class="mb-0"><code>{{ block.value }}</code></pre></div>
     {% else %}
       {% include_block block %}
     {% endif %}
