--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -8,6 +8,9 @@
 {% block content %}
 <div class="container py-5">
   <div class="row justify-content-center">
+    <h2 class="d-none d-md-block">{{ page.title }}</h2>
+    <h4 class="d-block d-md-none">{{ page.title }}</h4>
+
     {% for block in page.body %}
       {% if block.block_type == 'table' %}
         <div class="col-12 col-lg-10">
