--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -9,14 +9,13 @@
 <div class="container py-5">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-8">
-      <h2 class="d-none d-md-block">{{ page.title }}</h2>
-      <h4 class="d-block d-md-none">{{ page.title }}</h4>
+      <h1 class="d-none d-md-block">{{ page.title }}</h1>
+      <h3 class="d-block d-md-none">{{ page.title }}</h3>
     </div>
-
     {% for block in page.body %}
       {% if block.block_type == 'table' %}
         <div class="col-12 col-lg-10">
-          <div class="table-responsive">{{ block.value }}</div>
+          <div class="table-responsive border mb-3">{{ block.value }}</div>
         </div>
       {% elif block.block_type == 'code' %}
         <div class="col-12 col-lg-8">
