changed navbar color

--- a/pythonpractico/templates/base.html
+++ b/pythonpractico/templates/base.html
@@ -30,7 +30,7 @@
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
 
-        <nav class="navbar" style="background-color: #343a40">
+        <nav class="navbar" style="background-color: #233d3e">
           <a class="navbar-brand text-white" href="{% slugurl 'home' %}">PythonPractico</a>
         </nav>
 
