--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -9,9 +9,8 @@
   <div class="container py-5">
     <div class="row">
       <div class="col">
-        <h1 class="text-white weight-bold">Python Practico</h1>
-        <img class="card-img-top" src="https://www.xlwings.org/assets/images/home/xlwings.png">
-      </div>
+        <div class="jumbotron jumbotron-fluid" style="height: 250px;">
+        </div>
     </div>
   </div>
 </div>
