--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -9,7 +9,7 @@
   <div class="container py-5">
     <div class="row">
       <div class="col">
-        <div class="jumbotron jumbotron-fluid" style="height: 250px;">
+        <div class="jumbotron jumbotron-fluid" style="background-color: #233d3e; height: 250px;">
         </div>
     </div>
   </div>
