--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -18,48 +18,25 @@
 <div id="latest" style="background-color: #f8faf9">
   <div class="container py-5">
     <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
-    <div class="card border-0 my-3">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    {% for article in recent_articles %}
+      <a href="{% pageurl article %}">
+        <div class="card border-0 my-3">
+          <div class="card-body">
+            <h5 class="card-title">{{ article.title }}</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
         </div>
-      </div>
-      <div class="card border-0 my-3">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        </div>
-      </div>
+      </a>
+    {% endfor %}
   </div>
 </div>
 
 <div id="featured" style="background-color: #ffffff" py-5>
   <div class="container py-5">
-    <h3 class="text-dark weight-bold">Categorias</h3>
-    <div class="card-deck">
-      <div class="card">
-      <img class="card-img-top" src="https://static.amazon.jobs/global_images/32/images/Location_copy.jpg?1540849565" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Python</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-      </div>
-      <div class="card">
-      <img class="card-img-top" src="https://static.amazon.jobs/global_images/36/images/Teams_3_copy.jpg?1540850190" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Pandas</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
-      </div>
-      <div class="card">
-      <img class="card-img-top" src="https://static.amazon.jobs/global_images/34/images/Job_Categories-s.jpg?1540850104" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">Django</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      </div>
+    <div class="row">
+      <div class="col">
+        <div class="jumbotron jumbotron-fluid" style="background-color: #ffffff; height: 250px;">
+        </div>
       </div>
     </div>
   </div>
