--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -7,36 +7,47 @@
 
 {% block content %}
 <div class="container py-5">
-  <div class="row justify-content-start">
+
+  <div class="row">
     <div class="col-12 col-lg-8">
       <h1 class="d-none d-md-block">{{ page.title }}</h1>
       <h3 class="d-block d-md-none">{{ page.title }}</h3>
-
-    {% for block in page.body %}
-      {% if block.block_type == 'table' %}
-      <div class="row">
-        <div class="col-12 col-lg-2">Out [ ]:</div>
-        <div class="col-12 col-lg-10">
-          <div class="table-responsive border mb-3">{{ block.value }}</div>
-        </div>
-      </div>
-      {% elif block.block_type == 'code' %}
-      <div class="row">
-        <div class="col-12 col-lg-2">In [ ]:</div>
-        <div class="col-12 col-lg-10">
-          <div class="bg-light border p-3 mb-3"><pre class="mb-0"><code>{{ block.value }}</code></pre></div>
-        </div>
-      </div>
-      {% else %}
-      <div class="row">
-      <div class="col-12">
-        {% include_block block %}
-      </div>
-    </div>
-      {% endif %}
-    {% endfor %}
-
     </div>
   </div>
+
+  {% for block in page.body %}
+    {% if block.block_type == 'table' %}
+    <div class="row">
+      <div class="col-12 col-lg-1">
+        Out []:
+      </div>
+      <div class="col-12 col-lg-11">
+        <div class="table-responsive border mb-3">{{ block.value }}</div>
+      </div>
+    </div>
+      
+
+    {% elif block.block_type == 'code' %}
+    <div class="row">
+      <div class="col-12 col-lg-1">
+        In []:
+      </div>
+      <div class="col-12 col-lg-11">
+        <div class="bg-light border p-3 mb-3"><pre class="mb-0"><code>{{ block.value }}</code></pre></div>
+      </div>
+    </div>
+      
+
+    {% else %}
+    <div class="row">
+      <div class="col-12">
+      {% include_block block %}
+      </div>
+    </div>
+
+    {% endif %}
+  {% endfor %}
+
+  
 </div>
 {% endblock content %}
