--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -7,6 +7,8 @@
 
 {% block content %}
 <div class="container py-5">
+  <div class="row">
+    <div class="col-12 col-lg-8">
 
   <div class="row">
     <div class="col-12 col-lg-8">
@@ -49,5 +51,7 @@
   {% endfor %}
 
   
+</div>
+</div>
 </div>
 {% endblock content %}
