--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="container py-5">
-  <div class="row">
+  <div class="row justify-content-center">
     <div class="col-12 col-lg-8">
 
   <div class="row">
@@ -42,7 +42,8 @@
 
     {% else %}
     <div class="row">
-      <div class="col-12">
+      <div class="col-1"></div>
+      <div class="col-11">
       {% include_block block %}
       </div>
     </div>
