--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="container py-5">
   <div class="row justify-content-center">
-    <div class="col-12 col-lg-8">
+    <div class="col-12 col-lg-9">
 
   <div class="row">
     <div class="col-12 col-lg-8">
@@ -31,7 +31,7 @@
 
     {% elif block.block_type == 'code' %}
     <div class="row">
-      <div class="col-12 col-lg-1">
+      <div class="col-12 col-lg-1 pr-0">
         In []:
       </div>
       <div class="col-12 col-lg-11">
@@ -42,7 +42,7 @@
 
     {% else %}
     <div class="row">
-      <div class="col-1"></div>
+      <div class="col-1 pr-0"></div>
       <div class="col-11">
       {% include_block block %}
       </div>
