--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -42,8 +42,8 @@
 
     {% else %}
     <div class="row">
-      <div class="col-1"></div>
-      <div class="col-11">
+      <div class="col-1 d-none d-lg-block"></div>
+      <div class="col-12 col-lg-11">
       {% include_block block %}
       </div>
     </div>
