--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -10,36 +10,32 @@
   <div class="row justify-content-center">
     <div class="col-12 col-lg-9">
 
-  <div class="row">
-    <div class="col-12 col-lg-8">
-      <h1 class="d-none d-md-block">{{ page.title }}</h1>
-      <h3 class="d-block d-md-none">{{ page.title }}</h3>
+    <div class="row">
+      <div class="col-1 d-none d-lg-block"></div>
+      <div class="col-12 col-lg-11">
+        <h1 class="d-none d-md-block">{{ page.title }}</h1>
+        <h3 class="d-block d-md-none">{{ page.title }}</h3>
+      </div>
     </div>
-  </div>
-
-  {% for block in page.body %}
+    {% for block in page.body %}
     {% if block.block_type == 'table' %}
     <div class="row">
-      <div class="col-12 col-lg-1 pr-0">
+      <div class="col-12 col-lg-1 pr-0 text-right">
         Out [ ]:
       </div>
       <div class="col-12 col-lg-11">
         <div class="table-responsive border mb-3">{{ block.value }}</div>
       </div>
     </div>
-      
-
     {% elif block.block_type == 'code' %}
     <div class="row">
-      <div class="col-12 col-lg-1 pr-0">
+      <div class="col-12 col-lg-1 pr-0 text-right">
         In [ ]:
       </div>
       <div class="col-12 col-lg-11">
         <div class="bg-light border p-3 mb-3"><pre class="mb-0"><code>{{ block.value }}</code></pre></div>
       </div>
     </div>
-      
-
     {% else %}
     <div class="row">
       <div class="col-1 d-none d-lg-block"></div>
@@ -47,12 +43,9 @@
       {% include_block block %}
       </div>
     </div>
-
     {% endif %}
-  {% endfor %}
-
-  
-</div>
-</div>
+    {% endfor %}
+    </div>
+  </div>
 </div>
 {% endblock content %}
