--- a/pythonpractico/templates/base.html
+++ b/pythonpractico/templates/base.html
@@ -4,6 +4,16 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128528409-2"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            
+            gtag('config', 'UA-128528409-2');
+        </script>
+
         <meta charset="utf-8" />
         <title>
             {% block title %}
