--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -20,10 +20,10 @@
     <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
     {% for article in recent_articles %}
     <a href="{% pageurl article %}">
-      <div class="card border-0 my-3">
+      <div class="card border-0 my-3" style="color: #233d3e">
         <div class="card-body">
           <h5 class="card-title">{{ article.title }}</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">{{ article.intro }}</p>
         </div>
       </div>
     </a>
