--- a/pythonpractico/templates/base.html
+++ b/pythonpractico/templates/base.html
@@ -39,7 +39,7 @@
         {% wagtailuserbar %}
 
         <nav class="navbar" style="background-color: #233d3e">
-          <a class="navbar-brand text-white" href="{% slugurl 'home' %}">PythonPractico</a>
+          <a class="navbar-brand text-white font-weight-bold" href="{% slugurl 'home' %}">PythonPractico</a>
         </nav>
 
         {% block content %}
