--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -2,9 +2,9 @@
 {% load static wagtailcore_tags %}
 
 {% block content %}
-<div class="container py-5">
+<div class="container py-3">
   <div class="row">
-    <div class="col-10">
+    <div class="col-12 col-lg-10">
       <h1 class="d-none d-md-block">{{ page.title }}</h1>
       <h3 class="d-block d-md-none">{{ page.title }}</h3>
       {% for block in page.body %}
