--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -17,17 +17,21 @@
 
 <div id="latest" style="background-color: #f8faf9">
   <div class="container py-5">
-    <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
-    {% for article in recent_articles %}
-    <a href="{% pageurl article %}">
-      <div class="card border-0 my-3" style="color: #233d3e">
-        <div class="card-body">
-          <h5 class="card-title">{{ article.title }}</h5>
-          <p class="card-text">{{ article.intro }}</p>
-        </div>
+    <div class="row">
+      <div class="col">
+        <h3 class="text-dark weight-bold">Lo ultimo en el blog</h3>
+        {% for article in recent_articles %}
+        <a href="{% pageurl article %}">
+          <div class="card border-0 my-3" style="color: #233d3e">
+            <div class="card-body">
+              <h5 class="card-title">{{ article.title }}</h5>
+              <p class="card-text">{{ article.intro }}</p>
+            </div>
+          </div>
+        </a>
+        {% endfor %}
       </div>
-    </a>
-    {% endfor %}
+    </div>
   </div>
 </div>
 
