--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -16,4 +16,5 @@
 {% endblock content %}
 
 {% block extra_css %}
+  <link rel="stylesheet" type="text/css" href="{% static 'css/pyhighlight.css' %}">
 {% endblock %}
