--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -16,5 +16,6 @@
 {% endblock content %}
 
 {% block extra_css %}
+  <link rel="stylesheet" type="text/css" href="{% static 'css/ipython.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'css/pyhighlight.css' %}">
 {% endblock %}
