--- a/home/templates/home/article_page.html
+++ b/home/templates/home/article_page.html
@@ -5,10 +5,14 @@
 <div class="container py-3">
   <div class="row">
     <div class="col-12 col-lg-10">
-      <h1 class="d-none d-md-block">{{ page.title }}</h1>
-      <h3 class="d-block d-md-none">{{ page.title }}</h3>
+      <h1 class="d-none">{{ page.title }}</h1>
+      <p class="d-none">{{ page.intro }}</p>
       {% for block in page.body %}
-        {{ block.value }}
+        {% if block.block_type == 'html' %}
+          {{ block.value }}
+        {% else %}
+          <div></div>
+        {% endif %}
       {% endfor %}
     </div>
   </div>
